--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url(//fonts.googleapis.com/css?family=Lato:300,400,700);
-body {
+body, #aboutWrapper h3, #aboutWrapper .aboutContents ul {
   font-family: 'Lato', sans-serif;
   letter-spacing: .07em;
 }
@@ -42,44 +42,183 @@ li {
 }
 
 /*
-	Sideboard Section
- */
-#info {
-  background: #000;
-  height: 100%;
-  position: absolute;
-  width: 100%;
-  visibility: hidden;
-  z-index: 100;
-}
-
-/*
 	SNS buttons Section
  */
 #sns {
   position: fixed;
   bottom: 20px;
   right: 10px;
+  z-index: 100000;
 }
 
 .twitter-share-button {
   max-width: 90px;
 }
 
-.box {
-  -moz-border-radius: 16px;
-  -webkit-border-radius: 16px;
-  border-radius: 16px;
-  border: 1px solid #000;
-  width: 100px;
-  height: 50px;
+.logo {
+  border: 2px solid #000;
+  width: 140px;
+  height: 150px;
   position: fixed;
   top: 10px;
   left: 10px;
   z-index: 100;
 }
 
+.info {
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  border-radius: 15px;
+  background: #000;
+  color: #fff;
+  cursor: pointer;
+  font-size: 125%;
+  height: 30px;
+  position: fixed;
+  right: 30px;
+  text-align: center;
+  top: 30px;
+  width: 30px;
+  vertical-align: middle;
+  z-index: 100;
+}
+.info span {
+  line-height: 30px;
+  padding-left: 1px;
+}
+
 /*
     @include transform(translateY(12px));
     @include transition(all 0.3s ease-in-out);
 */
+#aboutWrapper {
+  background: #000;
+  height: 100%;
+  left: 0;
+  opacity: 0;
+  /*     padding: 40px; */
+  position: absolute;
+  top: 0;
+  width: 100%;
+  visibility: hidden;
+  z-index: 1000;
+}
+#aboutWrapper #aboutFrame {
+  height: 100%;
+  margin: auto;
+  position: relative;
+  width: 100%;
+  z-index: 0;
+}
+#aboutWrapper h3 {
+  color: #fff;
+  font-size: 167%;
+  left: 50%;
+  margin: 0  0 0 -157px;
+  position: absolute;
+  top: 80px;
+}
+#aboutWrapper #close {
+  display: block;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  border-radius: 15px;
+  background: #fff;
+  cursor: pointer;
+  height: 30px;
+  position: fixed;
+  right: 30px;
+  top: 30px;
+  width: 30px;
+  z-index: 10000;
+}
+#aboutWrapper #close .btnClose {
+  cursor: pointer;
+  height: 30px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 30px;
+}
+#aboutWrapper #close .btnClose .line {
+  background: #000;
+  display: block;
+  height: 3px;
+  position: absolute;
+  width: 16px;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+#aboutWrapper #close .btnClose .line:nth-child(1),
+#aboutWrapper #close .btnClose .line:nth-child(2) {
+  left: 7px;
+  top: 14px;
+}
+#aboutWrapper #close .btnClose .line:nth-child(1) {
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+#aboutWrapper #close .btnClose .line:nth-child(2) {
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+#aboutWrapper #close .btnClose:hover .line:nth-child(1) {
+  -moz-transform: rotate(225deg);
+  -ms-transform: rotate(225deg);
+  -webkit-transform: rotate(225deg);
+  transform: rotate(225deg);
+}
+#aboutWrapper #close .btnClose:hover .line:nth-child(2) {
+  -moz-transform: rotate(135deg);
+  -ms-transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+#aboutWrapper .aboutContents {
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -10;
+}
+#aboutWrapper .aboutContents ul {
+  bottom: 0;
+  font-size: 1.3em;
+  font-weight: 400;
+  height: 354px;
+  left: 0;
+  line-height: 32px;
+  margin: auto;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 900px;
+  z-index: 10;
+}
+#aboutWrapper .aboutContents li {
+  list-style: none;
+}
+#aboutWrapper .aboutContents li div {
+  padding: 0.2em 0;
+}
+#aboutWrapper .aboutContents li .date, #aboutWrapper .aboutContents li .title {
+  float: left;
+}
+#aboutWrapper .aboutContents li .date {
+  width: 160px;
+}
+#aboutWrapper .aboutContents li .title {
+  width: 560px;
+}
+#aboutWrapper .aboutContents li a {
+  color: #000;
+}
