--- a/sass/style.scss
+++ b/sass/style.scss
@@ -47,44 +47,197 @@ li {
 }
 
 
-/*
-	Sideboard Section
- */
-#info {
-    background: #000;
-    height: 100%;
-    position: absolute;
-    width: 100%;
-    visibility: hidden;
-    z-index: 100;
-}
 
 /*
 	SNS buttons Section
  */
-
 #sns {
     position: fixed;
     bottom: 20px;
     right: 10px;
+    z-index: 100000;
 }
 
 .twitter-share-button {
     max-width:90px;
 }
 
-.box {
-    @include border-radius(16px);
-    border: 1px solid #000;
-    width: 100px;
-    height: 50px;
+.logo {
+    border: 2px solid #000;
+    width: 140px;
+    height: 150px;
     position: fixed;
     top: 10px;
     left: 10px;
     z-index: 100;
 }
 
+.info {
+    @include border-radius(15px);
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+    font-size: $px15;
+    height: 30px;
+    position: fixed;
+    right: 30px;
+    text-align: center;
+    top: 30px;
+    width: 30px;
+    vertical-align: middle;
+    z-index: 100;
+
+    span {
+        line-height: 30px;
+        padding-left: 1px;
+    }
+}
+
 /*
     @include transform(translateY(12px));
     @include transition(all 0.3s ease-in-out);
 */
+
+
+
+
+#aboutWrapper {
+    background: #000;
+    height: 100%;
+    left: 0;
+    opacity: 0;
+/*     padding: 40px; */
+    position: absolute;
+    top: 0;
+    width: 100%;
+    visibility: hidden;
+    z-index: 1000;
+    
+    #aboutFrame {
+        height: 100%;
+        margin: auto;
+        position: relative;
+        width: 100%;
+        z-index: 0;
+    }
+    
+    h3 {
+        @extend %lato;
+        color: #fff;
+        font-size: $px20;
+        left: 50%;
+        margin: 0  0 0 -157px;
+        position: absolute;
+        top: 80px;
+    }
+
+    #close {
+        display: block;
+        @include border-radius(15px);
+        background: #fff;
+        cursor: pointer;
+        height: 30px;
+        position: fixed;
+        right: 30px;
+        top: 30px;
+        width: 30px;
+        z-index: 10000;
+
+
+
+        .btnClose {
+            cursor: pointer;
+            height: 30px;
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 30px;
+    
+            .line {
+                background: #000;
+                display: block;
+                height: 3px;
+                position: absolute;
+                width: 16px;
+                @include transition(all 0.3s ease-in-out);
+            }
+
+            .line:nth-child(1),
+            .line:nth-child(2) {
+                left: 7px;
+                top: 14px;
+            }
+
+            .line:nth-child(1) {
+                @include transform(rotate(45deg));
+            }
+            
+            .line:nth-child(2) {
+                @include transform(rotate(-45deg));
+            }
+        }
+
+        .btnClose:hover {
+            .line:nth-child(1) {
+                @include transform(rotate(225deg));
+            }
+            
+            .line:nth-child(2) {
+                @include transform(rotate(135deg));
+            }
+        }
+    }
+    
+    .aboutContents {
+        bottom: 0;
+        left: 0;
+        margin: auto;
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: -10;
+
+        ul{
+            @extend %lato;
+            bottom: 0;
+            font-size: 1.3em;
+            font-weight: 400;
+            height: 354px;
+            left: 0;
+            line-height: 32px;
+            margin: auto;
+            padding: 0;
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 900px;
+            z-index: 10;
+        }
+
+        li {
+            list-style: none;
+
+            div {
+                padding: 0.2em 0;
+            }
+            
+            .date, .title {
+                float: left;
+            }
+            
+            .date {
+                width: 160px;
+            }
+            
+            .title {
+                width: 560px;
+            }
+            
+            a {
+                color: #000;
+            }
+        }
+    }
+
+}
+
