--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,15 @@
 @import "compass";
 @import "ptp-12";
-@import url(//fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(http://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans:400,300,700,600);
 
-%lato {
-  font-family: 'Lato', sans-serif;
+
+%openSans {
+  font-family: 'Open Sans', sans-serif;
   letter-spacing: .07em;
+}
+
+%fjalla {
+    font-family: 'Fjalla One', sans-serif;
 }
 
 * {
@@ -20,7 +25,7 @@ body, html {
 }
 
 body {
-    @extend %lato;
+    @extend %openSans;
     font-size: $px20;
     margin: 0;
     padding: 0;
@@ -122,11 +127,12 @@ li {
     }
     
     h3 {
-        @extend %lato;
+        @extend %fjalla;
         color: #fff;
-        font-size: $px20;
+        font-size: $px27;
         left: 50%;
-        margin: 0  0 0 -157px;
+        letter-spacing: .01em;
+        margin: 0  0 0 -143px;
         position: absolute;
         top: 80px;
     }
@@ -152,7 +158,7 @@ li {
             right: 0;
             top: 0;
             width: 30px;
-    
+
             .line {
                 background: #000;
                 display: block;
@@ -189,6 +195,7 @@ li {
     }
     
     .aboutContents {
+        background: url(../images/aboutBg.jpg) no-repeat center center fixed;
         bottom: 0;
         left: 0;
         margin: auto;
@@ -196,47 +203,58 @@ li {
         right: 0;
         top: 0;
         z-index: -10;
+        @include background-size(cover);
 
         ul{
-            @extend %lato;
+            @extend %openSans;
             bottom: 0;
-            font-size: 1.3em;
+            font-size: .9em;
             font-weight: 400;
             height: 354px;
             left: 0;
-            line-height: 32px;
+            letter-spacing: .02em;
+            line-height: 20px;
             margin: auto;
             padding: 0;
             position: absolute;
             right: 0;
             top: 0;
-            width: 900px;
             z-index: 10;
         }
 
-        li {
-            list-style: none;
-
-            div {
-                padding: 0.2em 0;
-            }
-            
-            .date, .title {
-                float: left;
-            }
-            
-            .date {
-                width: 160px;
-            }
-            
-            .title {
-                width: 560px;
-            }
-            
-            a {
-                color: #000;
-            }
+        .bubbleYuriy,
+        .bubbleMasato {
+            background: #fff;
+            margin: 16px auto;
+            padding: 11px 16px;
+            position: relative;
+            width: 550px;
+            @include border-radius(3px);
         }
+
+        .bubbleYuriy:after,
+        .bubbleMasato:after {
+            border-style: solid;
+            border-color: transparent #fff;
+            content: "";
+            position: absolute;
+            top: 13px;
+            display: block;
+            width: 0;
+            z-index: 1;
+        }
+
+        .bubbleYuriy:after {
+            border-width: 8px 8px 8px 0;
+            left: -8px;
+        }
+        
+        .bubbleMasato:after {
+            border-width: 8px 0 8px 8px;
+            right: -8px;
+        }
+
+
     }
 
 }
