add icon image on about page

--- a/css/style.css
+++ b/css/style.css
@@ -60,13 +60,12 @@ li {
 }
 
 .logo {
-  border: 2px solid #000;
-  width: 140px;
-  height: 150px;
+  width: 120px;
+  height: 129px;
   position: fixed;
-  top: 10px;
-  left: 10px;
-  z-index: 100;
+  top: 20px;
+  left: 20px;
+  z-index: 10000;
 }
 
 .info {
@@ -203,7 +202,7 @@ li {
   bottom: 0;
   font-size: .9em;
   font-weight: 400;
-  height: 354px;
+  height: 330px;
   left: 0;
   letter-spacing: .02em;
   line-height: 20px;
@@ -212,6 +211,7 @@ li {
   position: absolute;
   right: 0;
   top: 0;
+  width: 720px;
   z-index: 10;
 }
 #aboutWrapper .aboutContents .bubbleYuriy,
@@ -224,6 +224,17 @@ li {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   border-radius: 3px;
+}
+#aboutWrapper .aboutContents .bubbleYuriy img,
+#aboutWrapper .aboutContents .bubbleMasato img {
+  position: absolute;
+  top: -3px;
+}
+#aboutWrapper .aboutContents .bubbleYuriy img {
+  left: -70px;
+}
+#aboutWrapper .aboutContents .bubbleMasato img {
+  right: -70px;
 }
 #aboutWrapper .aboutContents .bubbleYuriy:after,
 #aboutWrapper .aboutContents .bubbleMasato:after {
