implement info path

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -101,11 +101,8 @@ li {
 
 }
 
-#infoWindow {
-    width: 150px !important;
-}
 
-
+/*
 .info {
     @include border-radius(15px);
     background: #000;
@@ -125,6 +122,16 @@ li {
         line-height: 30px;
         padding-left: 1px;
     }
+}
+*/
+
+#info {
+    background: #fff;
+    cursor: pointer;
+    position: fixed;
+    right: 30px;
+    top: 30px;
+    z-index: 100;
 }
 
 #aboutWrapper {
@@ -312,4 +319,5 @@ li {
     }
 
 }
+
 
