--- a/css/style.css
+++ b/css/style.css
@@ -93,30 +93,35 @@ li {
   margin: 0;
 }
 
-#infoWindow {
-  width: 150px !important;
-}
-
+/*
 .info {
-  -moz-border-radius: 15px;
-  -webkit-border-radius: 15px;
-  border-radius: 15px;
-  background: #000;
-  color: #fff;
+    @include border-radius(15px);
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+    font-size: $px15;
+    height: 30px;
+    position: fixed;
+    right: 30px;
+    text-align: center;
+    top: 30px;
+    width: 30px;
+    vertical-align: middle;
+    z-index: 100;
+
+    span {
+        line-height: 30px;
+        padding-left: 1px;
+    }
+}
+*/
+#info {
+  background: #fff;
   cursor: pointer;
-  font-size: 125%;
-  height: 30px;
   position: fixed;
   right: 30px;
-  text-align: center;
   top: 30px;
-  width: 30px;
-  vertical-align: middle;
   z-index: 100;
-}
-.info span {
-  line-height: 30px;
-  padding-left: 1px;
 }
 
 #aboutWrapper {
