--- a/css/style.css
+++ b/css/style.css
@@ -93,34 +93,22 @@ li {
   margin: 0;
 }
 
-/*
 .info {
-    @include border-radius(15px);
-    background: #000;
-    color: #fff;
-    cursor: pointer;
-    font-size: $px15;
-    height: 30px;
-    position: fixed;
-    right: 30px;
-    text-align: center;
-    top: 30px;
-    width: 30px;
-    vertical-align: middle;
-    z-index: 100;
-
-    span {
-        line-height: 30px;
-        padding-left: 1px;
-    }
-}
-*/
-#info {
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  border-radius: 15px;
+  background: #000;
   cursor: pointer;
+  height: 30px;
   position: fixed;
   right: 30px;
   top: 30px;
+  width: 30px;
   z-index: 100;
+}
+.info span {
+  line-height: 30px;
+  padding-left: 1px;
 }
 
 #aboutWrapper {
