--- a/sass/style.scss
+++ b/sass/style.scss
@@ -102,35 +102,39 @@ li {
 }
 
 
-/*
 .info {
     @include border-radius(15px);
     background: #000;
-    color: #fff;
     cursor: pointer;
-    font-size: $px15;
     height: 30px;
     position: fixed;
     right: 30px;
-    text-align: center;
     top: 30px;
     width: 30px;
-    vertical-align: middle;
     z-index: 100;
 
-    span {
-        line-height: 30px;
-        padding-left: 1px;
+    .infoIcon {
+        position: relative;
+
+        span {
+            position: absolute;
+            display: block;
+        }
+        
+        .infoDot,
+        .infoLine {
+            position: absolute;
+            display: block;
+            border-radius: 2px;
+            background: #fff;
+        }
+        
+        .infoDot {
+            top: 2px;
+            transform-origin: 4px 4px;
+        }
+
     }
-}
-*/
-
-#info {
-    cursor: pointer;
-    position: fixed;
-    right: 30px;
-    top: 30px;
-    z-index: 100;
 }
 
 #aboutWrapper {
