--- a/css/style.css
+++ b/css/style.css
@@ -93,24 +93,515 @@ li {
   margin: 0;
 }
 
-.info {
+.hamburglar {
   -moz-border-radius: 15px;
   -webkit-border-radius: 15px;
   border-radius: 15px;
   background: #000;
-  cursor: pointer;
+  display: block;
   height: 30px;
   position: fixed;
-  right: 30px;
-  top: 30px;
+  right: 10px;
+  top: 10px;
+  transform: scale(1);
   width: 30px;
-  z-index: 100;
-}
-.info span {
-  line-height: 30px;
-  padding-left: 1px;
+  z-index: 1000;
 }
 
+.burger-icon {
+  position: absolute;
+  height: 30px;
+  width: 30px;
+}
+
+.burger-container {
+  position: relative;
+  height: 30px;
+  width: 30px;
+}
+
+.burger-bun-top,
+.burger-bun-bot {
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  position: absolute;
+  display: block;
+  height: 4px;
+  width: 12px;
+  background: #fff;
+}
+
+.burger-bun-top {
+  width: 4px;
+}
+
+.burger-bun-top {
+  top: 3px;
+  transform-origin: 2px 5px;
+}
+
+.burger-bun-bot {
+  bottom: 2px;
+  transform-origin: 14px 3px;
+}
+
+.hamburglar.is-open .burger-bun-top {
+  -moz-animation: bun-top-out 0.2s linear normal;
+  -webkit-animation: bun-top-out 0.2s linear normal;
+  animation: bun-top-out 0.2s linear normal;
+  -moz-animation-fill-mode: forwards;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  /*
+          animation: bun-top-out $animation linear normal;
+          animation-fill-mode:forwards;
+  */
+}
+.hamburglar.is-open .burger-bun-bot {
+  -moz-animation: bun-bot-out 0.2s linear normal;
+  -webkit-animation: bun-bot-out 0.2s linear normal;
+  animation: bun-bot-out 0.2s linear normal;
+  -moz-animation-fill-mode: forwards;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  /*
+          animation: bun-bot-out $animation linear normal;
+          animation-fill-mode:forwards;
+  */
+}
+
+.hamburglar.is-closed .burger-bun-top {
+  -moz-animation: bun-top-in 0.2s linear normal;
+  -webkit-animation: bun-top-in 0.2s linear normal;
+  animation: bun-top-in 0.2s linear normal;
+  -moz-animation-fill-mode: forwards;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  /*
+          animation: bun-top-in $animation linear normal;
+          animation-fill-mode:forwards;
+  */
+}
+.hamburglar.is-closed .burger-bun-bot {
+  -moz-animation: bun-bot-in 0.2s linear normal;
+  -webkit-animation: bun-bot-in 0.2s linear normal;
+  animation: bun-bot-in 0.2s linear normal;
+  -moz-animation-fill-mode: forwards;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  /*
+          animation: bun-bot-in $animation linear normal;
+          animation-fill-mode:forwards;
+  */
+}
+
+@-moz-keyframes bun-top-out {
+  0% {
+    left: 10px;
+    top: 4px;
+    transform: rotate(90deg);
+  }
+  20% {
+    left: 10px;
+    top: 6px;
+    transform: rotate(75deg);
+  }
+  80% {
+    left: 8px;
+    top: 6px;
+    transform: rotate(60deg);
+  }
+  100% {
+    background-color: #000;
+    left: 6px;
+    top: 7px;
+    width: 20px;
+    -moz-transition-property: width;
+    transition-property: width;
+    transform: rotate(45deg);
+    -moz-transition-property: background-color;
+    transition-property: background-color;
+  }
+}
+@-webkit-keyframes bun-top-out {
+  0% {
+    left: 10px;
+    top: 4px;
+    transform: rotate(90deg);
+  }
+  20% {
+    left: 10px;
+    top: 6px;
+    transform: rotate(75deg);
+  }
+  80% {
+    left: 8px;
+    top: 6px;
+    transform: rotate(60deg);
+  }
+  100% {
+    background-color: #000;
+    left: 6px;
+    top: 7px;
+    width: 20px;
+    -webkit-transition-property: width;
+    transition-property: width;
+    transform: rotate(45deg);
+    -webkit-transition-property: background-color;
+    transition-property: background-color;
+  }
+}
+@keyframes bun-top-out {
+  0% {
+    left: 10px;
+    top: 4px;
+    transform: rotate(90deg);
+  }
+  20% {
+    left: 10px;
+    top: 6px;
+    transform: rotate(75deg);
+  }
+  80% {
+    left: 8px;
+    top: 6px;
+    transform: rotate(60deg);
+  }
+  100% {
+    background-color: #000;
+    left: 6px;
+    top: 7px;
+    width: 20px;
+    -moz-transition-property: width;
+    -o-transition-property: width;
+    -webkit-transition-property: width;
+    transition-property: width;
+    transform: rotate(45deg);
+    -moz-transition-property: background-color;
+    -o-transition-property: background-color;
+    -webkit-transition-property: background-color;
+    transition-property: background-color;
+  }
+}
+@-moz-keyframes bun-top-in {
+  0% {
+    left: 6px;
+    top: 7px;
+    width: 20px;
+    -moz-transition-property: width;
+    transition-property: width;
+    transform: rotate(45deg);
+  }
+  20% {
+    left: 8px;
+    top: 6px;
+    transform: rotate(60deg);
+  }
+  80% {
+    left: 10px;
+    top: 6px;
+    transform: rotate(75deg);
+  }
+  100% {
+    background-color: #fff;
+    left: 10px;
+    top: 4px;
+    transform: rotate(90deg);
+    -moz-transition-property: background-color;
+    transition-property: background-color;
+  }
+}
+@-webkit-keyframes bun-top-in {
+  0% {
+    left: 6px;
+    top: 7px;
+    width: 20px;
+    -webkit-transition-property: width;
+    transition-property: width;
+    transform: rotate(45deg);
+  }
+  20% {
+    left: 8px;
+    top: 6px;
+    transform: rotate(60deg);
+  }
+  80% {
+    left: 10px;
+    top: 6px;
+    transform: rotate(75deg);
+  }
+  100% {
+    background-color: #fff;
+    left: 10px;
+    top: 4px;
+    transform: rotate(90deg);
+    -webkit-transition-property: background-color;
+    transition-property: background-color;
+  }
+}
+@keyframes bun-top-in {
+  0% {
+    left: 6px;
+    top: 7px;
+    width: 20px;
+    -moz-transition-property: width;
+    -o-transition-property: width;
+    -webkit-transition-property: width;
+    transition-property: width;
+    transform: rotate(45deg);
+  }
+  20% {
+    left: 8px;
+    top: 6px;
+    transform: rotate(60deg);
+  }
+  80% {
+    left: 10px;
+    top: 6px;
+    transform: rotate(75deg);
+  }
+  100% {
+    background-color: #fff;
+    left: 10px;
+    top: 4px;
+    transform: rotate(90deg);
+    -moz-transition-property: background-color;
+    -o-transition-property: background-color;
+    -webkit-transition-property: background-color;
+    transition-property: background-color;
+  }
+}
+@-moz-keyframes bun-bot-out {
+  0% {
+    left: 0px;
+    bottom: 2px;
+    width: 12px;
+    transform: rotate(90deg);
+    -moz-transition-property: width;
+    transition-property: width;
+  }
+  20% {
+    left: -2px;
+    width: 15px;
+    transform: rotate(105deg);
+    -moz-transition-property: width;
+    transition-property: width;
+  }
+  80% {
+    left: -2px;
+    width: 18px;
+    transform: rotate(120deg);
+    -moz-transition-property: width;
+    transition-property: width;
+  }
+  100% {
+    background-color: #000;
+    left: -2px;
+    bottom: 11px;
+    width: 20px;
+    transform: rotate(135deg);
+    -moz-transition-property: width;
+    transition-property: width;
+    -moz-transition-property: background-color;
+    transition-property: background-color;
+  }
+}
+@-webkit-keyframes bun-bot-out {
+  0% {
+    left: 0px;
+    bottom: 2px;
+    width: 12px;
+    transform: rotate(90deg);
+    -webkit-transition-property: width;
+    transition-property: width;
+  }
+  20% {
+    left: -2px;
+    width: 15px;
+    transform: rotate(105deg);
+    -webkit-transition-property: width;
+    transition-property: width;
+  }
+  80% {
+    left: -2px;
+    width: 18px;
+    transform: rotate(120deg);
+    -webkit-transition-property: width;
+    transition-property: width;
+  }
+  100% {
+    background-color: #000;
+    left: -2px;
+    bottom: 11px;
+    width: 20px;
+    transform: rotate(135deg);
+    -webkit-transition-property: width;
+    transition-property: width;
+    -webkit-transition-property: background-color;
+    transition-property: background-color;
+  }
+}
+@keyframes bun-bot-out {
+  0% {
+    left: 0px;
+    bottom: 2px;
+    width: 12px;
+    transform: rotate(90deg);
+    -moz-transition-property: width;
+    -o-transition-property: width;
+    -webkit-transition-property: width;
+    transition-property: width;
+  }
+  20% {
+    left: -2px;
+    width: 15px;
+    transform: rotate(105deg);
+    -moz-transition-property: width;
+    -o-transition-property: width;
+    -webkit-transition-property: width;
+    transition-property: width;
+  }
+  80% {
+    left: -2px;
+    width: 18px;
+    transform: rotate(120deg);
+    -moz-transition-property: width;
+    -o-transition-property: width;
+    -webkit-transition-property: width;
+    transition-property: width;
+  }
+  100% {
+    background-color: #000;
+    left: -2px;
+    bottom: 11px;
+    width: 20px;
+    transform: rotate(135deg);
+    -moz-transition-property: width;
+    -o-transition-property: width;
+    -webkit-transition-property: width;
+    transition-property: width;
+    -moz-transition-property: background-color;
+    -o-transition-property: background-color;
+    -webkit-transition-property: background-color;
+    transition-property: background-color;
+  }
+}
+@-moz-keyframes bun-bot-in {
+  0% {
+    left: -2px;
+    bottom: 11px;
+    width: 20px;
+    transform: rotate(135deg);
+    -moz-transition-property: width;
+    transition-property: width;
+  }
+  20% {
+    left: -2px;
+    width: 18px;
+    transform: rotate(120deg);
+    -moz-transition-property: width;
+    transition-property: width;
+  }
+  80% {
+    left: -2px;
+    width: 15px;
+    transform: rotate(105deg);
+    -moz-transition-property: width;
+    transition-property: width;
+  }
+  100% {
+    background-color: #fff;
+    left: 0px;
+    bottom: 2px;
+    width: 12px;
+    transform: rotate(90deg);
+    -moz-transition-property: width;
+    transition-property: width;
+    -moz-transition-property: background-color;
+    transition-property: background-color;
+  }
+}
+@-webkit-keyframes bun-bot-in {
+  0% {
+    left: -2px;
+    bottom: 11px;
+    width: 20px;
+    transform: rotate(135deg);
+    -webkit-transition-property: width;
+    transition-property: width;
+  }
+  20% {
+    left: -2px;
+    width: 18px;
+    transform: rotate(120deg);
+    -webkit-transition-property: width;
+    transition-property: width;
+  }
+  80% {
+    left: -2px;
+    width: 15px;
+    transform: rotate(105deg);
+    -webkit-transition-property: width;
+    transition-property: width;
+  }
+  100% {
+    background-color: #fff;
+    left: 0px;
+    bottom: 2px;
+    width: 12px;
+    transform: rotate(90deg);
+    -webkit-transition-property: width;
+    transition-property: width;
+    -webkit-transition-property: background-color;
+    transition-property: background-color;
+  }
+}
+@keyframes bun-bot-in {
+  0% {
+    left: -2px;
+    bottom: 11px;
+    width: 20px;
+    transform: rotate(135deg);
+    -moz-transition-property: width;
+    -o-transition-property: width;
+    -webkit-transition-property: width;
+    transition-property: width;
+  }
+  20% {
+    left: -2px;
+    width: 18px;
+    transform: rotate(120deg);
+    -moz-transition-property: width;
+    -o-transition-property: width;
+    -webkit-transition-property: width;
+    transition-property: width;
+  }
+  80% {
+    left: -2px;
+    width: 15px;
+    transform: rotate(105deg);
+    -moz-transition-property: width;
+    -o-transition-property: width;
+    -webkit-transition-property: width;
+    transition-property: width;
+  }
+  100% {
+    background-color: #fff;
+    left: 0px;
+    bottom: 2px;
+    width: 12px;
+    transform: rotate(90deg);
+    -moz-transition-property: width;
+    -o-transition-property: width;
+    -webkit-transition-property: width;
+    transition-property: width;
+    -moz-transition-property: background-color;
+    -o-transition-property: background-color;
+    -webkit-transition-property: background-color;
+    transition-property: background-color;
+  }
+}
 #aboutWrapper {
   background: #000;
   height: 100%;
