--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,10 +3,11 @@
 @import url(http://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans:400,300,700,600);
 @import 'compass/css3/filter';
 @import "compass/utilities/sprites";
+@import "compass/css3/border-radius";
 
 %openSans {
-  font-family: 'Open Sans', sans-serif;
-  letter-spacing: .07em;
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: .07em;
 }
 
 %fjalla {
@@ -101,41 +102,216 @@ li {
 
 }
 
+// vars
+$color: #fff;   // icon color
+$animation: 0.2s;   // animation speed
+$scale: 1;    // icon scale 68/68 default
 
-.info {
+.hamburglar {
     @include border-radius(15px);
     background: #000;
-    cursor: pointer;
+    display: block;
     height: 30px;
     position: fixed;
-    right: 30px;
-    top: 30px;
+    right: 10px;
+    top: 10px;
+    transform: scale($scale);
     width: 30px;
-    z-index: 100;
+    z-index: 1000;
+}
 
-    .infoIcon {
-        position: relative;
 
-        span {
-            position: absolute;
-            display: block;
-        }
-        
-        .infoDot,
-        .infoLine {
-            position: absolute;
-            display: block;
-            border-radius: 2px;
-            background: #fff;
-        }
-        
-        .infoDot {
-            top: 2px;
-            transform-origin: 4px 4px;
-        }
+// All good burgers need filling!
 
+.burger-icon {
+    position: absolute;
+    height: 30px;
+    width: 30px;
+}
+
+.burger-container {
+    position: relative;
+    height: 30px;
+    width: 30px;
+}
+
+.burger-bun-top,
+.burger-bun-bot {
+    @include border-radius(2px);
+    position: absolute;
+    display: block;
+    height: 4px;
+    width: 12px;
+    background: $color;
+}
+.burger-bun-top {
+    width: 4px;
+}
+
+.burger-bun-top {
+    top: 3px;
+    transform-origin: 2px 5px;
+}
+
+.burger-bun-bot {
+    bottom: 2px;
+    transform-origin: 14px 3px;
+}
+
+// bun animations 
+.hamburglar.is-open {
+    .burger-bun-top {
+        @include animation(bun-top-out $animation linear normal);
+        @include animation-fill-mode(forwards);
+/*
+        animation: bun-top-out $animation linear normal;
+        animation-fill-mode:forwards;
+*/
+    }
+    .burger-bun-bot {
+        @include animation(bun-bot-out $animation linear normal);
+        @include animation-fill-mode(forwards);
+/*
+        animation: bun-bot-out $animation linear normal;
+        animation-fill-mode:forwards;
+*/
     }
 }
+.hamburglar.is-closed {
+    .burger-bun-top {
+        @include animation(bun-top-in $animation linear normal);
+        @include animation-fill-mode(forwards);
+/*
+        animation: bun-top-in $animation linear normal;
+        animation-fill-mode:forwards;
+*/
+    }
+    .burger-bun-bot {
+        @include animation(bun-bot-in $animation linear normal);
+        @include animation-fill-mode(forwards);
+/*
+        animation: bun-bot-in $animation linear normal;
+        animation-fill-mode:forwards;
+*/
+    }
+}
+
+@include keyframes(bun-top-out) {
+    0% {
+        left: 10px;
+        top: 4px;
+        transform: rotate(90deg);
+    }
+    20% {
+        left: 10px;
+        top: 6px;
+        transform: rotate(75deg);
+    }
+    80% {
+        left: 8px;
+        top: 6px;
+        transform: rotate(60deg);
+    }
+    100% {
+        background-color: #000;
+        left: 6px;
+        top: 7px;
+        width: 20px;
+        @include transition-property(width);
+        transform: rotate(45deg);
+        @include transition-property(background-color);
+    }
+}
+
+@include keyframes(bun-top-in) {
+    0% {
+        left: 6px;
+        top: 7px;
+        width: 20px;
+        @include transition-property(width);
+        transform: rotate(45deg);
+    }
+    20% {
+        left: 8px;
+        top: 6px;
+        transform: rotate(60deg);
+    }
+    80% {
+        left: 10px;
+        top: 6px;
+        transform: rotate(75deg);
+    }
+    100% {
+        background-color: #fff;
+        left: 10px;
+        top: 4px;
+        transform: rotate(90deg);
+        @include transition-property(background-color);
+    }
+}
+
+@include keyframes(bun-bot-out) {
+    0% {
+        left: 0px;
+        bottom: 2px;
+        width: 12px;
+        transform: rotate(90deg);
+        @include transition-property(width);
+    }
+    20% {
+        left: -2px;
+        width: 15px;
+        transform: rotate(105deg);
+        @include transition-property(width);
+    }
+    80% {
+        left: -2px;
+        width: 18px;
+        transform: rotate(120deg);
+        @include transition-property(width);
+    }
+    100% {
+        background-color: #000;
+        left: -2px;
+        bottom: 11px;
+        width: 20px;
+        transform: rotate(135deg);
+        @include transition-property(width);
+        @include transition-property(background-color);
+    }
+}
+
+@include keyframes(bun-bot-in) {
+    0% {
+        left: -2px;
+        bottom: 11px;
+        width: 20px;
+        transform: rotate(135deg);
+        @include transition-property(width);
+    }
+    20% {
+        left: -2px;
+        width: 18px;
+        transform: rotate(120deg);
+        @include transition-property(width);
+    }
+    80% {
+        left: -2px;
+        width: 15px;
+        transform: rotate(105deg);
+        @include transition-property(width);
+    }
+    100% {
+        background-color: #fff;
+        left: 0px;
+        bottom: 2px;
+        width: 12px;
+        transform: rotate(90deg);
+        @include transition-property(width);
+        @include transition-property(background-color);
+    }
+}
+
 
 #aboutWrapper {
     background: #000;
