--- a/sass/style.scss
+++ b/sass/style.scss
@@ -307,6 +307,11 @@ $scale: 1;    // icon scale 68/68 default
     }
 }
 
+.shopLink {
+    a {
+        color: #cb0019;
+    }
+}
 
 #aboutWrapper {
     background: #000;
@@ -420,5 +425,3 @@ $scale: 1;    // icon scale 68/68 default
     }
 
 }
-
-
