--- a/sass/style.scss
+++ b/sass/style.scss
@@ -87,7 +87,6 @@ li {
 }
 
 .infoWindowWrapper {
-    padding: 10px 0 10px 10px;
     letter-spacing: 0;
 
     .shopLogo {
@@ -96,8 +95,17 @@ li {
     }
     
     h2 {
-        font-size: $px16;
+        font-size: $px18;
         margin: 0;
+    }
+
+    p, span {
+        font-size: $px13;
+        margin-top: 8px;
+    }
+    
+    span {
+        display: block;
     }
 
 }
