implement clicked maker position centre animation

--- a/css/style.css
+++ b/css/style.css
@@ -108,18 +108,22 @@ li {
 .infoWindowWrapper {
   background: #f1f0ee;
   box-sizing: border-box;
-  left: -180px;
+  height: 145px;
+  left: -194px;
   letter-spacing: 0;
+  min-width: 390px;
   padding: 20px;
   position: relative;
-  top: -220px;
-  width: 360px;
+  top: -216px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   -moz-box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 10px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 10px;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 10px;
+}
+.infoWindowWrapper .movableContents {
+  margin: 4px 0 0 127px;
 }
 .infoWindowWrapper h4 {
   font-size: 17px;
@@ -131,15 +135,29 @@ li {
   margin: 0 0 6px 0;
   font-size: 13px;
 }
+.infoWindowWrapper .shopContents {
+  float: right;
+  width: 100%;
+  margin: 0 0 0 -250px;
+}
 .infoWindowWrapper .shopLogo {
-  display: table-cell;
-  vertical-align: middle;
-}
-.infoWindowWrapper .shopLogo img {
-  margin-right: 15px;
-}
-.infoWindowWrapper .shopLogo span {
-  font-size: 14px;
+  /*
+      display: table-cell;
+      vertical-align: middle;
+  */
+  float: left;
+  width: 107px;
+  background: #ddd;
+  /*
+      img {
+        margin-right: 15px;
+      }
+  */
+  /*
+      span {
+        font-size: 14px;
+      }
+  */
 }
 
 .infoWindowWrapper:after {
@@ -744,6 +762,7 @@ li {
 }
 .shopLink a {
   color: #cb0019;
+  font-size: 14px;
 }
 
 #aboutWrapper {
