--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,13 @@ li {
       }
   */
 }
+.infoWindowWrapper .shopAddress a {
+  color: inherit;
+  text-decoration: none;
+}
+.infoWindowWrapper .shopAddress a:hover {
+  border-bottom: 1px solid #333;
+}
 
 .infoWindowWrapper:after {
   content: '';
@@ -798,6 +805,13 @@ li {
   -o-background-size: cover;
   -webkit-background-size: cover;
   background-size: cover;
+}
+#aboutWrapper .aboutContents h2 {
+  color: #fff;
+  font-size: 40px;
+  letter-spacing: 0;
+  margin-top: 110px;
+  text-align: center;
 }
 #aboutWrapper .aboutContents ul {
   bottom: 0;
