--- a/sass/style.scss
+++ b/sass/style.scss
@@ -141,13 +141,13 @@ li {
     margin: 0 0 6px 0;
     font-size: 13px;
   }
- 
+
   .shopContents {
     float: right;
     width: 100%;
     margin: 0 0 0 -250px;
   }
-  
+
   .shopLogo {
 /*
     display: table-cell;
@@ -170,6 +170,16 @@ li {
 */
   }
   
+  .shopAddress {
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+    
+    a:hover {
+      border-bottom: 1px solid #333;
+    }
+  }
 }
 
 .infoWindowWrapper:after 
@@ -431,6 +441,14 @@ $scale: 1;    // icon scale 68/68 default
         top: 0;
         z-index: -10;
         @include background-size(cover);
+        
+        h2 {
+          color: #fff;
+          font-size: 40px;
+          letter-spacing: 0;
+          margin-top: 110px;
+          text-align: center;
+        }
 
         ul{
             @extend %openSans;
