--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,9 +49,14 @@ li {
 }
 
 #mapCanvas {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
+
+  img {
+    max-width: none;
+  }
 }
+
 
 /*
 	SNS buttons Section
@@ -447,6 +452,7 @@ $scale: 1;    // icon scale 68/68 default
           font-size: 40px;
           letter-spacing: 0;
           margin-top: 110px;
+          min-width: 720px;
           text-align: center;
         }
 
