--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,11 @@ li {
 #mapCanvas {
   height: 100%;
   width: 100%;
+  /*
+    .gmnoprint {
+      left: 35px !important;
+    }
+  */
 }
 #mapCanvas img {
   max-width: none;
@@ -83,35 +88,10 @@ li {
   -ms-filter: invert(100%);
 }
 
-/*
-.infoWindowWrapper {
-    letter-spacing: 0;
-
-    .shopLogo {
-        float: left;
-        margin-right: 30px;
-    }
-    
-    h2 {
-        font-size: $px18;
-        margin: 0;
-    }
-
-    p, span {
-        font-size: $px13;
-        margin-top: 8px;
-    }
-    
-    span {
-        display: block;
-    }
-
-}
-*/
 .infoWindowWrapper {
   background: #f1f0ee;
   box-sizing: border-box;
-  height: 145px;
+  height: auto;
   left: -194px;
   letter-spacing: 0;
   min-width: 390px;
@@ -126,7 +106,7 @@ li {
   box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 10px;
 }
 .infoWindowWrapper .movableContents {
-  margin: 4px 0 0 127px;
+  margin: 0 0 0 127px;
 }
 .infoWindowWrapper h4 {
   font-size: 17px;
@@ -139,18 +119,15 @@ li {
   font-size: 13px;
 }
 .infoWindowWrapper .shopContents {
-  float: right;
-  width: 100%;
-  margin: 0 0 0 -250px;
+  /*
+      float: right;
+      width: 100%;
+      margin: 0 0 0 -250px;
+  */
 }
 .infoWindowWrapper .shopLogo {
-  /*
-      display: table-cell;
-      vertical-align: middle;
-  */
-  float: left;
-  width: 107px;
   background: #ddd;
+  float: left;
   /*
       img {
         margin-right: 15px;
@@ -171,17 +148,17 @@ li {
 }
 
 .infoWindowWrapper:after {
-  content: '';
-  position: absolute;
   border-style: solid;
   border-width: 8px 8px 0;
   border-color: #f1f0ee transparent;
-  display: block;
-  width: 0;
-  z-index: 1;
   bottom: -8px;
+  content: '';
+  display: block;
   left: 50%;
   margin-left: -8px;
+  position: absolute;
+  width: 0;
+  z-index: 1;
 }
 
 .hamburglar {
