--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,23 @@ li {
   list-style: none;
 }
 
+#loading {
+  background: #fff;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10000000;
+}
+#loading img {
+  width: 96px;
+  height: 96px;
+  margin: -68px 0 0 -68px;
+  padding: 20px;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+}
+
 #wrapper {
   width: 100%;
   height: 100%;
@@ -43,11 +60,6 @@ li {
 #mapCanvas {
   height: 100%;
   width: 100%;
-  /*
-    .gmnoprint {
-      left: 35px !important;
-    }
-  */
 }
 #mapCanvas img {
   max-width: none;
@@ -59,7 +71,7 @@ li {
 #sns {
   position: fixed;
   bottom: 20px;
-  right: 10px;
+  right: 4px;
   z-index: 100000;
 }
 
@@ -88,10 +100,19 @@ li {
   -ms-filter: invert(100%);
 }
 
+/*
+.gm-style {
+  .gmnoprint:last-child {
+    left: 34px !important;
+    bottom: 330px !important;
+  }
+}
+*/
 .infoWindowWrapper {
   background: #f1f0ee;
   box-sizing: border-box;
   height: auto;
+  min-height: 146px;
   left: -194px;
   letter-spacing: 0;
   min-width: 390px;
@@ -169,8 +190,8 @@ li {
   display: block;
   height: 30px;
   position: fixed;
-  right: 10px;
-  top: 10px;
+  right: 20px;
+  top: 20px;
   transform: scale(1);
   width: 30px;
   z-index: 10000;
