--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,10 +42,29 @@ li {
     list-style: none;
 }
 
+#loading {
+  background: #fff;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10000000;
+
+  img {
+    width: 96px;
+    height: 96px;
+    margin: -68px 0 0 -68px;
+    padding: 20px;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+  }
+}
+
+
 #wrapper {
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
 }
 
 #mapCanvas {
@@ -55,14 +74,7 @@ li {
   img {
     max-width: none;
   }
-  
-/*
-  .gmnoprint {
-    left: 35px !important;
-  }
-*/
 }
-
 
 /*
 	SNS buttons Section
@@ -70,7 +82,7 @@ li {
 #sns {
     position: fixed;
     bottom: 20px;
-    right: 10px;
+    right: 4px;
     z-index: 100000;
 }
 
@@ -97,11 +109,20 @@ li {
     }
 }
 
-.infoWindowWrapper
-{
+/*
+.gm-style {
+  .gmnoprint:last-child {
+    left: 34px !important;
+    bottom: 330px !important;
+  }
+}
+*/
+
+.infoWindowWrapper {
   background: #f1f0ee;
   box-sizing: border-box;
   height: auto;
+  min-height: 146px;
   left:-194px;
   letter-spacing: 0;
   min-width: 390px;
@@ -189,8 +210,8 @@ $scale: 1;    // icon scale 68/68 default
     display: block;
     height: 30px;
     position: fixed;
-    right: 10px;
-    top: 10px;
+    right: 20px;
+    top: 20px;
     transform: scale($scale);
     width: 30px;
     z-index: 10000;
