--- a/sass/style.scss
+++ b/sass/style.scss
@@ -68,13 +68,36 @@ li {
 }
 
 #mapCanvas {
+  bottom: 0;
   height: 100%;
+  position: absolute;
+  top: 0;
   width: 100%;
 
   img {
     max-width: none;
   }
+
+  #newPos{
+    position: fixed;
+    left: 34px;
+    bottom: 0;
+    margin: 0;
+  }
+  
+  .ctrl {
+    position: absolute;
+    bottom: 30px;
+    width: 88px;
+    height: 320px;
+  }
+
+  .ctrl > .gmnoprint {
+    top: 0 !important;
+  }
+
 }
+
 
 /*
 	SNS buttons Section
